<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">PHPMYSQL</string>
   <string name="action_settings">Settings</string>
   <string name="hello_world">Hello world!</string>
   <string name="RoomNumber">RoomNumber</string>
   <string name="Event">Event</string>
   <string name="LoginGet">Enter</string>
   <string name="LoginPost">Login - Post</string>
   <string name="EventSearch">Event Search</string>
   <string name="Eventt">Event:</string>
   <string name="LoginRole">Login Role</string>
   <string name="Status">event</string>
   <string name="Role">Search Result</string>
   <string name="Name">Name:</string>
   <string name="patientname">name</string>
	
</resources>