<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/selector"
        android:ems="10"
        android:hint="Room Number"
        android:textSize="15sp" >

        <requestFocus android:layout_width="wrap_content" />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/EventSearch"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="12dp"
        android:text="@string/RoomNumber" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/editSellEndTime"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:onClick="login"
        android:text="@string/LoginGet" />

    <EditText
        android:id="@+id/editSellStartTime"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector"
        android:ems="10"
        android:hint="Start Date" />

    <EditText
        android:id="@+id/editSellEndTime1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editSellEndTime"
        android:layout_alignBottom="@+id/editSellEndTime"
        android:layout_alignLeft="@+id/editSellStartTime1"
        android:background="@drawable/selector"
        android:ems="10"
        android:hint="End Time" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="15dp"
        android:text="@string/Event" />

    <EditText
        android:id="@+id/editSellEndTime"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editSellStartTime"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector"
        android:ems="10"
        android:hint="End Date" />

    <EditText
        android:id="@+id/editSellStartTime1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editSellStartTime"
        android:layout_alignBottom="@+id/editSellStartTime"
        android:layout_toRightOf="@+id/editSellStartTime"
        android:background="@drawable/selector"
        android:ems="10"
        android:hint="Start Time" />

    <Button
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_toRightOf="@+id/textView3"
        android:onClick="reset"
        android:text="Reset"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editSellEndTime1"
        android:layout_alignRight="@+id/textView2"
        android:text="Range" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/textView3"
        android:background="@drawable/selector"
        android:ems="10"
        android:hint="Event"
        android:inputType="text"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignLeft="@+id/button2"
        android:layout_marginLeft="19dp"
        android:onClick="resetevent"
        android:text="reset"
        android:textSize="10sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_toLeftOf="@+id/button1"
        android:onClick="Video"
        android:text="Video" />

</RelativeLayout>